@@ -1,0 +1,275 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "\u5f9e\u632a\u5a01\u9152\u5427\u8abf\u9152\u5e2b\u5230K-pop\u8a5e\u66f2\u4f5c\u8005\uff1aElineelia Myreng\u7684\u97f3\u6a02\u5922\u60f3\u4e4b\u8def", "description": "\u5f9e\u632a\u5a01\u9152\u5427\u8abf\u9152\u5e2b\u5230K-pop\u8a5e\u66f2\u4f5c\u8005\uff1aElineelia Myreng\u7684\u97f3\u6a02\u5922\u60f3\u4e4b\u8def", "url": "https://www.famechos.me/news/\u5f9e\u632a\u5a01\u9152\u5427\u8abf\u9152\u5e2b\u5230K-pop\u8a5e\u66f2\u4f5c\u8005\uff1aElineelia Myreng\u7684\u97f3\u6a02\u5922\u60f3\u4e4b\u8def.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-22T14:54:37.531565+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/從挪威酒吧調酒師到K-pop詞曲作者：Elineelia Myreng的音樂夢想之路.html"/>
+<meta name="description" content="挪威酒吧調酒師Elineelia Myreng如何轉變為K-pop詞曲作者？一起走進她的音樂夢想之路，探索她從調酒師到音樂創作者的非凡旅程。">
+
+<meta name="keywords" content="Elineelia Myreng、K-pop、詞曲作者、挪威酒吧調酒師、音樂夢想之路、音樂創作者">
+
+<link rel="stylesheet" href="../main-nav.css">
+<link rel="stylesheet" href="../main-content.css">
+<link rel="stylesheet" href="../main-small.css">
+<link rel="stylesheet" href="../post.css">
+<link rel="stylesheet" href="../main-footer.css">
+<link rel="stylesheet" href="../news.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/從挪威酒吧調酒師到K-pop詞曲作者：Elineelia Myreng的音樂夢想之路.html" />
+        <meta property="og:title" content="從挪威酒吧調酒師到K-pop詞曲作者：Elineelia Myreng的音樂夢想之路" />
+        <meta property="og:description" content="從挪威酒吧調酒師到K-pop詞曲作者：Elineelia Myreng的音樂夢想之路" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="從挪威酒吧調酒師到K-pop詞曲作者：Elineelia Myreng的音樂夢想之路" />
+        <meta property="twitter:description" content="從挪威酒吧調酒師到K-pop詞曲作者：Elineelia Myreng的音樂夢想之路" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+<meta property="og:type" content="article" />
+<meta name="robots" content="index, follow" />
+<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <a href="https://www.famechos.me/"><img class="famechos-logo" src="../img/famechos_logo.png"></a>
+         
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button></a>
+ 
+        </div>
+        <div class="nav-type-2 nav-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button></a>
+ 
+        </div>
+        <div class="nav-type-3 nav-type"><a href="https://www.famechos.me/drama.html">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button></a>
+         
+        </div>
+        <div class="nav-type-4 nav-type"><a href="https://www.famechos.me/others.html">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button></a>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer"><a href="https://www.famechos.me/about_us.html">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button></a>
+        </div>
+        <div class="nav-setting"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button></a>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type"><a href="https://www.famechos.me/drama.html">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type"><a href="https://www.famechos.me/others.html">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type"><a href="https://www.famechos.me/about_us.html">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button></a>
+
+        </div>  
+
+      </div>
+     
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>從挪威酒吧調酒師到K-pop詞曲作者：Elineelia Myreng的音樂夢想之路</h1>
+</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-Pop</p>
+          <p class="news-date">22/10/2024</p>
+        </div>
+<p>挪威歌手兼詞曲作者Elineelia Myreng曾在奧斯陸一家酒吧擔任兼職調酒師，但她與K-pop女團IVE合作的熱門單曲《I Am》卻讓她在25歲時實現了成為全職音樂製作人的夢想。</p>
+<p>Myreng與Audun和Kristin共同製作了《I Am》，他們在奧斯陸一家牡蠣酒吧的地下室裡創作了這首歌。Myreng表示，她很幸運地能夠全職從事詞曲創作。</p>
+<p>Myreng已經與多個K-pop藝人合作，包括Kiss of Life、孝淵和曹薇娟。但她的職業生涯並非從K-pop開始。在成為詞曲作者之前，她曾在500多場演唱會上擔任活動主唱。直到她決定專注於音樂創作並在挪威的Limpi學校學習，這所學校與洛杉磯藝術家和音樂製作學院有聯繫，她才發現自己在K-pop領域的興趣。</p>
+<p>Myreng的風格植根於2010年代流行的舞蹈流行和合成流行，自然與K-pop的聲音相吻合。她表示，她一直從遠處欣賞K-pop，欣賞其複雜性，並被每首歌曲中元素的融合所吸引。</p>
+對於Myreng來說，K-pop是一個全新的音樂世界，總能讓她娛樂，這激發了她更深入地探索它。她的偶像是碧昂絲、蕾哈娜、凱蒂佩芮和克里斯蒂娜阿奎萊拉，她們大膽而多彩，這與現在的K-pop明星所做的很相似。<h2>K-pop 詞曲創作者 Myreng：捕捉音樂中的不同聲音和態度</h2>
+<p>Myreng 是一位 K-pop 詞曲創作者，她最喜歡的 K-pop 製作之一是合作、團隊驅動的過程——就像在 K-pop 團體中一樣。在創作歌曲時，團隊經常一起錄製 demo，以模仿多人 K-pop 團體的感覺。</p>
+<p>Myreng 表示，為 K-pop 寫歌的有趣之處在於捕捉音樂中的不同聲音和態度。她會用不同的技巧來說唱和唱歌，使每個部分聽起來都很獨特。每個團員都有自己的發揮空間，這很重要。</p>
+<p>Myreng 還強調，K-pop 詞曲創作不僅僅是創作抓耳的旋律——還要創作與舞蹈相搭配的歌曲。她經常在錄音室跳舞，以確保曲目適合表演。</p>
+<p>她錄製《I Am》的 demo 時，不知道 IVE 會如何在唱歌的同時跳舞。K-pop 偶像在表演上投入了多少工作真的令人印象深刻。</p>
+<p>隨著 K-pop 的演變和融入更多主流流行元素，Myreng 認為該流派仍然因其獨特的風格和文化影響而脫穎而出。</p>
+<p>她表示，有很多來自斯堪的納維亞的優秀 K-pop 詞曲作者和製作人，她在一些 K-pop 曲目中肯定聽到了斯堪的納維亞流行音樂、ABBA 和歐洲歌唱大賽的元素。但它仍然非常多樣化。她喜歡 K-pop 歌曲可以在一首曲目中融合多種不同的流派。</p>
+<h2>突破流行音樂傳統框架的K-pop</h2>
+<p>K-pop的成功不僅僅是音樂的流行，還在於其文化和粉絲的獨特性。即使K-pop越來越接近主流流行音樂，但它仍然保持著自己的特色。</p>
+<p>對於Myreng來說，她希望在K-pop界繼續打造自己的職業生涯。她的夢想是與更多的團體合作，包括Nmixx、Le Sserafim和aespa。她還希望專注於自己的藝術創作，既喜歡為別人寫歌，也喜歡唱歌。</p>
+<p>以下是Myreng的未來計劃：</p>
+<ul>
+<li>與更多的團體合作</li>
+<li>專注於自己的藝術創作</li>
+<li>兼顧歌曲創作和演唱</li>
+</ul>
+<p>這篇文章是探索K-pop行業關鍵人物的特別訪談系列的第一篇，包括詞曲作者、培訓師、製作人和剛剛出道的K-pop偶像。他們分享了自己的角色、行業的競爭性質以及K-pop全球成功背後的商業機制。</p>
+
+<p>資料來源：Korea Herald</p>
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/B2xM_ipyzDs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： YouTube</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+     
+      <div class ="related-news-box">
+        
+<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/抄襲風波未平！ILLIT堅持自我發行新EP：我們的音樂只為了讓粉絲感到喜悅.html">抄襲風波未平！ILLIT堅持自我發行新EP：我們的音樂只為了讓粉絲感到喜悅</a>
+        </p>
+                
+<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/NewJeans成員Hanni國會聽證會痛哭：職場霸凌、內部衝突，誰該負責？.html">NewJeans成員Hanni國會聽證會痛哭：職場霸凌、內部衝突，誰該負責？</a>
+        </p>
+                
+<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/BTS成員鄭號錫退伍！18個月義務兵役結束，金碩珍前來迎接.html">BTS成員鄭號錫退伍！18個月義務兵役結束，金碩珍前來迎接</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <a href="https://www.famechos.me/"><img class="famechos-logo-footer" src="../img/famechos_logo.png"></a>
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <a href="https://www.famechos.me/k-pop.html"><p class="footer-text">K-POP</p></a>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <a href="https://www.famechos.me/j-pop.html"><p class="footer-text">J-POP</p></a>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <a href="https://www.famechos.me/drama.html"><p class="footer-text">影視</p></a>
+        </div>
+        <div class="other-footer-box footer-box">
+          <a href="https://www.famechos.me/others.html"><p class="footer-text">其他</p></a>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+     
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
