@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Tue, 22 Oct 2024 14:32:11 +0800</lastBuildDate>
+  <lastBuildDate>Tue, 22 Oct 2024 14:55:01 +0800</lastBuildDate>
 
   <item>
   <title>KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單</title>
@@ -339,5 +339,11 @@ YG娛樂旗下的新人女團BABYMONSTER（韓語：베이비몬스터）將於1
   <description>BTS成員Jin首張個人專輯《Happy》即將發行。BTS成員Jin的首張個人專輯《Happy》將於11月15日發行，專輯的主打歌曲是《Running Wild》。...</description>
   <category>K-Pop</category>
   <pubDate>Tue, 22 Oct 2024 14:32:11 +0800</pubDate>
+</item><item>
+  <title>從挪威酒吧調酒師到K-pop詞曲作者：Elineelia Myreng的音樂夢想之路</title>
+  <link>https://www.famechos.me/news/從挪威酒吧調酒師到K-pop詞曲作者：Elineelia Myreng的音樂夢想之路.html</link>
+  <description>挪威K-pop詞曲作者Elineelia Myreng。。挪威歌手兼詞曲作者Elineelia Myreng曾在奧斯陸一家酒吧擔任兼職調酒師，但她與K-pop女團IVE合作的熱門單曲《I Am》卻讓她在25歲時實現了成為全職音樂製作人的夢想。。...</description>
+  <category>K-Pop</category>
+  <pubDate>Tue, 22 Oct 2024 14:55:01 +0800</pubDate>
 </item></channel>
 </rss>
