@@ -338,4 +338,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/從挪威酒吧調酒師到K-pop詞曲作者：Elineelia Myreng的音樂夢想之路.html</ns0:loc>
+    <ns0:lastmod>2024-10-22T14:55:01+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
